# CPL-Labs

./: .gitignore  CMakeLists.txt  COMMIT_MASTER.PS1  README.md
Chapter1/Section-1.1/Exercise-1.1/: README.md  wrongHello.c
Chapter1/Section-1.1/Exercise-1.2/: README.md  wrongHello.c
Chapter1/Section-1.1/hello-world/: hello.hex
Chapter1/Section-1.10/Exercise-1.20/: README.md  detab.c  res.txt  sample.txt
Chapter1/Section-1.10/Exercise-1.21/: README.md  entab.c  res.txt  sample.txt
Chapter1/Section-1.10/Exercise-1.22/: README.md  fold.c  sample.txt
Chapter1/Section-1.10/Exercise-1.23/: README.md  nocomment.c  run_test.PS1  run_test.sh  sample.c  sample_fix.c
Chapter1/Section-1.10/Exercise-1.24/: README.md  checksyntax.c  run_check.PS1  run_check.sh  sample.c
Chapter1/Section-1.10/longest_char/: longest_char.c  sample.txt
Chapter1/Section-1.2/Exercise-1.3/: README.md  fc-convertor.c
Chapter1/Section-1.2/Exercise-1.4/: README.md  cf-convertor.c
Chapter1/Section-1.2/fc-convertor/: fc-convertor-float.c  fc-convertor-rj.c  fc-convertor.c  fc-convertor.hex
Chapter1/Section-1.3/Exercise-1.5/: README.md  fc-convertor-rv.c
Chapter1/Section-1.3/forloop/: fc-convertor-for.c
Chapter1/Section-1.4/symbolic/: fc-convertor-for.c
Chapter1/Section-1.5/Exercise-1.10/: README.md  sample.txt  visible_char.c
Chapter1/Section-1.5/Exercise-1.11/: README.md  sample.txt
Chapter1/Section-1.5/Exercise-1.12/: README.md  sample.txt  word_counting.c
Chapter1/Section-1.5/Exercise-1.6/: README.md  verify.c
Chapter1/Section-1.5/Exercise-1.7/: README.md  eof.c
Chapter1/Section-1.5/Exercise-1.8/: README.md  multi_count.c  sample.txt
Chapter1/Section-1.5/Exercise-1.9/: README.md  replace_multi_blank.c  sample.txt
Chapter1/Section-1.5/Input_and_output/: input.c
Chapter1/Section-1.5/char_count/: char_count_for.c  char_count_while.c
Chapter1/Section-1.5/line_count/: line_count_for.c  sample.txt
Chapter1/Section-1.5/word_counting/: sample.txt  word_counting.c
Chapter1/Section-1.6/Exercise-1.13/: README.md  sample2.txt  word_length_histogram_horizontal.c  word_length_histogram_vertical.c
Chapter1/Section-1.6/Exercise-1.14/: README.md  char_frequency.c  sample.txt
Chapter1/Section-1.7/Exercise-1.15/: README.md  cf-convertor-function.c
Chapter1/Section-1.9/Exercise-1.16/: README.md  ex.c
Chapter1/Section-1.9/Exercise-1.17/: README.md  ex.c
Chapter1/Section-1.9/Exercise-1.18/: README.md  ex.c
Chapter1/Section-1.9/Exercise-1.19/: README.md  ex.c
Chapter1/Section-1.9/char_arrays/: char_arrays.c
Chapter2/Section-2.2/Exercise-2.1/: README.md  range.c  (+1 more)
